<resources>
    <string name="app_name">TaxiPlanner</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign up</string>
    <string name="sig_in">Login</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="order_item_template_from">From: %1$s</string>
    <string name="order_item_template_to">To: %1$s</string>
    <string name="order_item_template_date">Date: %1$s</string>
    <string name="order_item_template_time">Time: %1$s</string>
    <string name="order_item_full_date_template">Date: %1$s %2$s</string>
    <string name="from_text_for_create_new_order_fragment">From</string>
    <string name="name_of_street_or_station">Name of street or station</string>
    <string name="to_text_for_create_new_order_fragment">To</string>
    <string name="date_of_trip">Date of trip</string>
    <string name="not_selected">not selected</string>
    <string name="time_of_trip">Time of trip</string>
    <string name="trip_description">Trip description</string>
    <string name="not_written">not written</string>
    <string name="show_my_phone_number">Show my phone number</string>
    <string name="you_number_is">You number is</string>
    <string name="create_order_text">create</string>
    <string name="set_order_date_status">%1$s.%2$s.%3$s</string>
    <string name="number_of_seats_in_car">Number of seats in car</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="fill_all_gaps">Please, fill all the gaps</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="order_item_template_description">Description: %1$s</string>
    <string name="order_item_template_number_seats">Number of seats : %1$d</string>
    <string name="apply">apply</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="surname">Surname</string>
    <string name="your_surname">Your surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">+78005553535</string>
    <string name="email">Email</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="verify_by_email">Verify by email</string>
    <string name="verify_by_phone_number">Verify by phone number</string>
    <string name="submit">Submit</string>
    <string name="or">OR</string>
    <string name="profile">Profile</string>
    <string name="logout">logout</string>
    <string name="edit">edit</string>
    <string name="call">Call</string>
    <string name="joined_users">Joined Users(%1$d)</string>
    <string name="joined_users_placeholder">%1$s %2$s</string>
    <string name="your_orders">Your orders</string>
    <string name="delete_order">Delete?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="registration_text">We will send an SMS with confirmation code to yor phone number</string>
    <string name="phone_verification_text">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="submit_changes">Submit changes?</string>
    <string name="update_app">You have to update</string>
    <string name="new_version_is_available_please_download_it">New version is available, please, download it</string>

</resources>
