<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/RegistrationTextView"
                android:text="@string/name" />

            <EditText
                android:id="@+id/registration_name_edit_text"
                style="@style/RegistrationEditText"
                android:hint="@string/your_name" />

            <TextView
                style="@style/RegistrationTextView"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/registration_surname_edit_text"
                style="@style/RegistrationEditText"
                android:hint="@string/your_surname" />

            <Button
                android:id="@+id/registration_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>