<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_text_for_create_new_order_fragment"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/name_of_street_or_station"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_text_for_create_new_order_fragment"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/name_of_street_or_station"/>


        <View
            style="@style/LightGrayHorizontalLine"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_trip"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:gravity="start"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:text="@string/not_selected"
                android:gravity="end"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

        </LinearLayout>

        <View
            style="@style/LightGrayHorizontalLine"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_of_trip"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:gravity="start"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:text="@string/not_selected"
                android:gravity="end"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
        </LinearLayout>
        <View
            style="@style/LightGrayHorizontalLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_description"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:gravity="start"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:text="@string/not_written"
                android:gravity="end"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
        </LinearLayout>

        <View
            style="@style/LightGrayHorizontalLine"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/show_my_phone_number"/>
        <View
            style="@style/LightGrayHorizontalLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_number_is"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:gravity="start"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/BrightDarkColor"
                android:text="@string/not_written"
                android:gravity="end"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
        </LinearLayout>

        <View
            style="@style/LightGrayHorizontalLine"/>


    </LinearLayout>

</ScrollView>